updated home page

--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
                             <label for="Address" class="form-label">Address</label>
                             <input type="text" class="form-control" id="address" aria-describedby="emailHelp" >
                         </div>
-                        <div class="mb-3">
-                            <label for="date" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="date" aria-describedby="emailHelp" >
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="date" class="form-label">Date</label>
+                                <input type="date" class="form-control" id="date" aria-describedby="emailHelp" >
+                            </div>
+                            <div class="col-6">
+                                <label for="time" class="form-label">Time</label>
+                                <input type="time" class="form-control" id="time" aria-describedby="emailHelp" >
+                            </div>
                         </div>
                         
                     </form>
@@ -121,7 +127,7 @@
 
             <div class="c-right">
                 <h1>Dr. Niyanta</h1>
-                <p>Founder of Holistic Homeo Healing</p>
+                <p>BHMS & PGDCP</p>
             </div>
         </div>
         
