Index page updated

--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                     <!-- logo code  -->
                     <a href="/" class="c-logo-container">
                         <img src="assets/images/logo/logo.png" alt="" class="c-logo">
+                        <div class="c-logo-text">
+                            <h1>Holistic Homoeo Healing</h1>
+                            <p>By Dr. Niyanta</p>
+                        </div>
                     </a>
     
                     <!-- menu toggle btn  -->
@@ -127,7 +131,7 @@
 
             <div class="c-right">
                 <h1>Dr. Niyanta</h1>
-                <p>BHMS & PGDCP</p>
+                <p>homeopath & Counseling Psychologist</p>
             </div>
         </div>
         
@@ -158,10 +162,12 @@
     </section>
     <!-- banner section end -->
 
-
     <!-- why choose us section start -->
     <section class="container-fluid c-why-choose-us-section-container">
+
         <div class="container c-why-choose-us-container">
+            <h2 class="c-extra-heading">Counseling Services</h2>
+
             <div class="c-why-choose-us-heading">
                 <h1>Why Choose Us?</h1>
                 <!-- <p>Founder of Holistic Homeo Healing</p> -->
