Blog section completed

--- a/index.html
+++ b/index.html
@@ -250,6 +250,49 @@
     </section>
     <!-- testimonials section end -->
 
+
+    <!-- blog section start -->
+    <section class="container-fluid c-blog-section-container">
+
+        <div class="container c-blog-container">
+
+            <div class="c-blog-heading">
+                <p>Our Latest Blogs</p>
+                <h1>latest Blogs</h1>
+            </div>
+            <section class="c-blog-container">
+                <div class="c-blog-card-container ">
+                    <div class="c-blog-card">
+                        <img class="c-blog-image" src="assets/images/blog/blog-1.jpg" alt="">
+                        <a href="javascript:void(0)" class="c-blog-name">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                        <p class="c-blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
+                        <p class="c-blog-date">December 6, 2023</p>
+                        <a href="javascript:void(0)">Read More &#187;</a>
+                    </div>
+
+                    <div class="c-blog-card">
+                        <img class="c-blog-image" src="assets/images/blog/blog-1.jpg" alt="">
+                        <a href="javascript:void(0)" class="c-blog-name">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                        <p class="c-blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
+                        <p class="c-blog-date">December 6, 2023</p>
+                        <a href="javascript:void(0)">Read More &#187;</a>
+                    </div>
+
+                    <div class="c-blog-card">
+                        <img class="c-blog-image" src="assets/images/blog/blog-1.jpg" alt="">
+                        <a href="javascript:void(0)" class="c-blog-name">Lorem ipsum dolor sit amet consectetur adipisicing elit.</a>
+                        <p class="c-blog-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
+                        <p class="c-blog-date">December 6, 2023</p>
+                        <a href="javascript:void(0)">Read More &#187;</a>
+                    </div>
+                </div>
+            </section>
+
+        </div>
+        
+    </section>
+    <!-- blog section end -->
+
     
 
 
