about us and testimonials updated

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <a href="index.html"class="c-active">Home</a>
                         </li>
                         <li class="c-menu-item">
-                            <a href="#">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li class="c-menu-item">
                             <a href="#">Services</a>
@@ -214,32 +214,34 @@
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
                         <img class="c-user-image" src="assets/images/testimonials/user-1.jpg" alt="">
-                        <p class="c-user-review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
-                        <h1 class="c-user-name">Disha patani</h1>
+                        <p class="c-user-review-text">I was suffering from ovarian cyst with no menses from 4 months and doctors advised me surgery. Dr. Niyanta was my close friend so I consulted her and she gave me a homeopathic medicine and just after taking the first dose I got my periods within few hours and on getting an ultrasound we found out that there was no cyst. I am really greatful to her.</p>
+                        <h1 class="c-user-name">Sapna</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
                 </div>
+
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
                         <img class="c-user-image" src="assets/images/testimonials/user-2.jpg" alt="">
-                        <p class="c-user-review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
-                        <h1 class="c-user-name">Disha patani</h1>
+                        <p class="c-user-review-text">At 40, thyroid issues plagued me despite treatment from multiple homeopaths. After years of struggle, a friend referred me to Dr. Niyanta. In six months, her treatment normalized my thyroid levels, leading to weight loss and increased energy. Dr. Niyanta's medicine changed my life, restoring my health and menstrual cycle.</p>
+                        <h1 class="c-user-name">Sunita Syal</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
                 </div>
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
                         <img class="c-user-image" src="assets/images/testimonials/user-3.jpg" alt="">
-                        <p class="c-user-review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
-                        <h1 class="c-user-name">Disha patani</h1>
+                        <p class="c-user-review-text">
+                            Scheduled for surgery for piles, but tried Dr. Niyanta's treatment on a friend's advice. Improvement began immediately and within a month, all symptoms disappeared. Chose to skip surgery and have remained healthy for three years with no recurrence.</p>
+                        <h1 class="c-user-name">Deepak shingari</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
                 </div>
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
                         <img class="c-user-image" src="assets/images/testimonials/user-4.jpg" alt="">
-                        <p class="c-user-review-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rerum nesciunt excepturi similique inventore natus dicta, quia nihil dolore vitae sint iste voluptatibus nobis dolorum, temporibus commodi aperiam atque illum.</p>
-                        <h1 class="c-user-name">Disha patani</h1>
+                        <p class="c-user-review-text">Four years ago, my 10-year-old son had kidney stones, leaving us hopeless. Meeting Dr. Niyanta at a Gurdwara camp changed everything. Her treatment swiftly healed him, restoring joy. Dr. Niyanta's expertise earned our gratitude, leading me to recommend her clinic confidently.</p>
+                        <h1 class="c-user-name">Bawa</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
                 </div>
