--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <a href="about.html">About</a>
                         </li>
                         <li class="c-menu-item">
-                            <a href="#">Services</a>
+                            <a href="our-service.html">Our Services</a>
                         </li>
                         <li class="c-menu-item">
                             <a href="#">Blogs</a>
