--- a/our-service.html
+++ b/our-service.html
@@ -110,7 +110,7 @@
                             <a href="our-service.html">Our Services</a>
                         </li>
                         <li class="c-menu-item">
-                            <a href="#">Blogs</a>
+                            <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
