--- a/about.html
+++ b/about.html
@@ -168,7 +168,11 @@
     <!--  About us page content section end -->
 
     
-
+    <!-- footer section start  -->
+    <footer class="container-fluid c-footer-container">
+        <p>©2024  Homio.com  All Rights Reserved </p>
+    </footer>
+    <!-- footer section end  -->
     
    
 
