--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
                         <img class="c-user-image" src="assets/images/testimonials/user-2.jpg" alt="">
-                        <p class="c-user-review-text">At 40, thyroid issues plagued me despite treatment from multiple homeopaths. After years of struggle, a friend referred me to Dr. Niyanta. In six months, her treatment normalized my thyroid levels, leading to weight loss and increased energy. Dr. Niyanta's medicine changed my life, restoring my health and menstrual cycle.</p>
+                        <p class="c-user-review-text">At the age of 40, I struggled with thyroid issues for years, seeking treatment from various homeopaths across different cities without success. Despite countless attempts, my condition persisted, accompanied by weight gain and fatigue. Then, upon a dear friend's recommendation, I turned to Dr. Niyanta for help. Within just six months of her treatment, my thyroid levels normalized, and I experienced a remarkable improvement in my overall well-being. Not only did my weight decrease significantly, but I also resumed menstruation after a year and a half. Dr. Niyanta's medicine truly transformed my life.</p>
                         <h1 class="c-user-name">Sunita Syal</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
@@ -232,15 +232,15 @@
                     <div class="c-testimonials-card">
                         <img class="c-user-image" src="assets/images/testimonials/user-3.jpg" alt="">
                         <p class="c-user-review-text">
-                            Scheduled for surgery for piles, but tried Dr. Niyanta's treatment on a friend's advice. Improvement began immediately and within a month, all symptoms disappeared. Chose to skip surgery and have remained healthy for three years with no recurrence.</p>
+                            I was scheduled for surgery the next day due to a persistent struggle with piles. However, at the recommendation of a trusted friend, I sought the expertise of Dr. Niyanta. From the moment I began her treatment, I experienced remarkable improvement. Within just one month, all symptoms vanished entirely – no pain, bleeding, or discomfort. I opted out of surgery and, three years later, remain in excellent health, free from any recurrence of my previous issues.</p>
                         <h1 class="c-user-name">Deepak shingari</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
                 </div>
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
-                        <img class="c-user-image" src="assets/images/testimonials/user-4.jpg" alt="">
-                        <p class="c-user-review-text">Four years ago, my 10-year-old son had kidney stones, leaving us hopeless. Meeting Dr. Niyanta at a Gurdwara camp changed everything. Her treatment swiftly healed him, restoring joy. Dr. Niyanta's expertise earned our gratitude, leading me to recommend her clinic confidently.</p>
+                        <img class="c-user-image" src="assets/images/testimonials/bawa.jpeg" alt="">
+                        <p class="c-user-review-text">Four years ago, my son, just 10 years old, was suffering from kidney stones, and all hope seemed lost after numerous doctors couldn't offer a solution. However, our lives changed when we met Dr. Niyanta at a camp in the nearest Gurdwara. Her treatment not only healed my son's condition but also brought back hope and happiness into our lives. Following her guidance, my son's stones were completely removed within a few days, and he's now thriving in health and stature. Dr. Niyanta's expertise and care have earned her a special place in our hearts – she's nothing short of a divine blessing. Since then, I've confidently referred many friends and acquaintances to her clinic, knowing firsthand the transformative impact of her treatments.</p>
                         <h1 class="c-user-name">Bawa</h1>
                         <p class="c-user-location">New Delhi</p>
                     </div>
@@ -295,6 +295,11 @@
     </section>
     <!-- blog section end -->
 
+    <!-- footer section start  -->
+    <footer class="container-fluid c-footer-container">
+        <p>©2024  Homio.com  All Rights Reserved </p>
+    </footer>
+    <!-- footer section end  -->
     
 
 
