--- a/contact.html
+++ b/contact.html
@@ -224,7 +224,11 @@
     <!--  Our Service page content section end -->
 
 
-
+    <!-- footer section start  -->
+    <footer class="container-fluid c-footer-container">
+        <p>©2024  Homio.com  All Rights Reserved </p>
+    </footer>
+    <!-- footer section end  -->
     
     
     <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
