--- a/index.html
+++ b/index.html
@@ -52,13 +52,97 @@
                             <input type="text" class="form-control" id="address" aria-describedby="emailHelp" >
                         </div>
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-lg-6 col-xs-12 mb-3">
                                 <label for="date" class="form-label">Date</label>
                                 <input type="date" class="form-control" id="date" aria-describedby="emailHelp" >
                             </div>
-                            <div class="col-6">
+                            <div class="col-lg-6 col-xs-12">
                                 <label for="time" class="form-label">Time</label>
-                                <input type="time" class="form-control" id="time" aria-describedby="emailHelp" >
+                                <div class="row">
+                                    <div class="col">
+                                        <select class="form-select form-select-md mb-3" id="time-hours" aria-label="Large select example">
+                                            <option selected>HH</option>
+                                            <option value="01">01</option>
+                                            <option value="02">02</option>
+                                            <option value="03">03</option>
+                                            <option value="04">04</option>
+                                            <option value="05">05</option>
+                                            <option value="06">06</option>
+                                            <option value="07">07</option>
+                                            <option value="08">08</option>
+                                            <option value="09">09</option>
+                                            <option value="10">10</option>
+                                            <option value="11">11</option>
+                                            <option value="12">12</option>
+                                        </select>
+                                    </div>
+                                    :
+                                    <div class="col">
+                                        <select class="form-select form-select-md mb-3" id="time-minutes" aria-label="Large select example">
+                                            <option selected>MM</option>
+                                            <option value="00">00</option>
+                                            <option value="01">01</option>
+                                            <option value="02">02</option>
+                                            <option value="03">03</option>
+                                            <option value="04">04</option>
+                                            <option value="05">05</option>
+                                            <option value="06">06</option>
+                                            <option value="07">07</option>
+                                            <option value="08">08</option>
+                                            <option value="09">09</option>
+                                            <option value="10">10</option>
+                                            <option value="11">11</option>
+                                            <option value="12">12</option>
+                                            <option value="13">13</option>
+                                            <option value="14">14</option>
+                                            <option value="15">15</option>
+                                            <option value="16">16</option>
+                                            <option value="17">17</option>
+                                            <option value="18">18</option>
+                                            <option value="19">19</option>
+                                            <option value="20">20</option>
+                                            <option value="21">21</option>
+                                            <option value="22">22</option>
+                                            <option value="23">23</option>
+                                            <option value="24">24</option>
+                                            <option value="25">25</option>
+                                            <option value="26">26</option>
+                                            <option value="27">27</option>
+                                            <option value="28">28</option>
+                                            <option value="29">29</option>
+                                            <option value="30">30</option>
+                                            <option value="31">31</option>
+                                            <option value="32">32</option>
+                                            <option value="33">33</option>
+                                            <option value="34">34</option>
+                                            <option value="35">35</option>
+                                            <option value="36">36</option>
+                                            <option value="37">37</option>
+                                            <option value="38">38</option>
+                                            <option value="39">39</option>
+                                            <option value="40">40</option>
+                                            <option value="41">41</option>
+                                            <option value="42">42</option>
+                                            <option value="43">43</option>
+                                            <option value="44">44</option>
+                                            <option value="45">45</option>
+                                            <option value="46">46</option>
+                                            <option value="47">47</option>
+                                            <option value="48">48</option>
+                                            <option value="49">49</option>
+                                            <option value="50">50</option>
+                                            <option value="51">51</option>
+                                            <option value="52">52</option>
+                                            <option value="53">53</option>
+                                            <option value="54">54</option>
+                                            <option value="55">55</option>
+                                            <option value="56">56</option>
+                                            <option value="57">57</option>
+                                            <option value="58">58</option>
+                                            <option value="59">59</option>
+                                        </select>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         
@@ -81,10 +165,10 @@
                     <!-- logo code  -->
                     <a href="/" class="c-logo-container">
                         <img src="assets/images/logo/logo.png" alt="" class="c-logo">
-                        <div class="c-logo-text">
+                        <!-- <div class="c-logo-text">
                             <h1>Holistic Homoeo Healing</h1>
                             <p>By Dr. Niyanta</p>
-                        </div>
+                        </div> -->
                     </a>
     
                     <!-- menu toggle btn  -->
