--- a/our-service.html
+++ b/our-service.html
@@ -80,10 +80,10 @@
                     <!-- logo code  -->
                     <a href="/" class="c-logo-container">
                         <img src="assets/images/logo/logo.png" alt="" class="c-logo">
-                        <div class="c-logo-text">
+                        <!-- <div class="c-logo-text">
                             <h1>Holistic Homoeo Healing</h1>
                             <p>By Dr. Niyanta</p>
-                        </div>
+                        </div> -->
                     </a>
     
                     <!-- menu toggle btn  -->
