--- a/index.html
+++ b/index.html
@@ -217,8 +217,10 @@
             </div>
 
             <div class="c-right">
+                <p class="c-sub-heading">Homeopath & Counseling Psychologist</p>
                 <h1>Dr. Niyanta</h1>
-                <p>homeopath & Counseling Psychologist</p>
+                <p>Enhancing transparency through written prescriptions, I aim to empower patients with knowledge, optimizing their time and elevating their well-being as priority.</p>
+                <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#book-appointment-popup">Contact Us</button>
             </div>
         </div>
         
@@ -253,10 +255,10 @@
     <section class="container-fluid c-why-choose-us-section-container">
 
         <div class="container c-why-choose-us-container">
-            <h2 class="c-extra-heading">Counseling Services</h2>
+            <h2 class="c-extra-heading">Why Choose Us?</h2>
 
             <div class="c-why-choose-us-heading">
-                <h1>Why Choose Us?</h1>
+                <h1>Counseling Services</h1>
                 <!-- <p>Founder of Holistic Homeo Healing</p> -->
             </div>
             <div class="c-welcome-content">
@@ -300,16 +302,16 @@
                         <img class="c-user-image" src="assets/images/testimonials/user-1.jpg" alt="">
                         <p class="c-user-review-text">I was suffering from ovarian cyst with no menses from 4 months and doctors advised me surgery. Dr. Niyanta was my close friend so I consulted her and she gave me a homeopathic medicine and just after taking the first dose I got my periods within few hours and on getting an ultrasound we found out that there was no cyst. I am really greatful to her.</p>
                         <h1 class="c-user-name">Sapna</h1>
-                        <p class="c-user-location">New Delhi</p>
+                        <p class="c-user-location">Phagwara punjab</p>
                     </div>
                 </div>
 
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
-                        <img class="c-user-image" src="assets/images/testimonials/user-2.jpg" alt="">
+                        <img class="c-user-image" src="assets/images/testimonials/sunita-syal.jpeg" alt="">
                         <p class="c-user-review-text">At the age of 40, I struggled with thyroid issues for years, seeking treatment from various homeopaths across different cities without success. Despite countless attempts, my condition persisted, accompanied by weight gain and fatigue. Then, upon a dear friend's recommendation, I turned to Dr. Niyanta for help. Within just six months of her treatment, my thyroid levels normalized, and I experienced a remarkable improvement in my overall well-being. Not only did my weight decrease significantly, but I also resumed menstruation after a year and a half. Dr. Niyanta's medicine truly transformed my life.</p>
                         <h1 class="c-user-name">Sunita Syal</h1>
-                        <p class="c-user-location">New Delhi</p>
+                        <p class="c-user-location">phagwara, punjab</p>
                     </div>
                 </div>
                 <div class="c-testimonials-card-container carousel-cell">
@@ -326,7 +328,15 @@
                         <img class="c-user-image" src="assets/images/testimonials/bawa.jpeg" alt="">
                         <p class="c-user-review-text">Four years ago, my son, just 10 years old, was suffering from kidney stones, and all hope seemed lost after numerous doctors couldn't offer a solution. However, our lives changed when we met Dr. Niyanta at a camp in the nearest Gurdwara. Her treatment not only healed my son's condition but also brought back hope and happiness into our lives. Following her guidance, my son's stones were completely removed within a few days, and he's now thriving in health and stature. Dr. Niyanta's expertise and care have earned her a special place in our hearts – she's nothing short of a divine blessing. Since then, I've confidently referred many friends and acquaintances to her clinic, knowing firsthand the transformative impact of her treatments.</p>
                         <h1 class="c-user-name">Bawa</h1>
-                        <p class="c-user-location">New Delhi</p>
+                        <p class="c-user-location">ludhiana, punjab</p>
+                    </div>
+                </div>
+                <div class="c-testimonials-card-container carousel-cell">
+                    <div class="c-testimonials-card">
+                        <img class="c-user-image" src="assets/images/testimonials/user-2.jpg" alt="">
+                        <p class="c-user-review-text">Experiencing the discomfort of allergies without the relief of sneezing left me feeling trapped. Thankfully, Dr. Niyanta’s expertise and personalized treatment plan were the beacon of hope I needed. Within a few weeks under her care, I found myself on the path to recovery. Grateful beyond words for her compassionate guidance.</p>
+                        <h1 class="c-user-name">Neetu</h1>
+                        <p class="c-user-location">40/f, New Delhi</p>
                     </div>
                 </div>
             </section>
