homoeopethic cunsaltation section added

--- a/index.html
+++ b/index.html
@@ -285,7 +285,48 @@
         </div>
         
     </section>
-    <!-- why choose us section end -->
+    <!-- why choose us section end -->  
+
+    <!-- why choose us section start -->
+    <section class="container-fluid c-homoeopathic-consultation-section-container">
+
+        <div class="container c-homoeopathic-consultation-container">
+            <!-- <h2 class="c-extra-heading">Why Choose Us?</h2> -->
+
+            <div class="c-homoeopathic-consultation-heading">
+                <h1>Homoeopathic Consultation
+                </h1>
+                <!-- <p>Founder of Holistic Homeo Healing</p> -->
+            </div>
+            <div class="c-homoeopathic-consultation-content">
+                <p><b>1. Holistic Approach:</b> Dr. Niyanta offers a holistic approach to healing, addressing not just the symptoms but also the underlying causes of the ailment. This ensures comprehensive and lasting results.</p>
+
+                <p><b>2. Personalized Treatment Plans:</b> Each patient receives a personalized treatment plan tailored to their unique needs, considering their medical history, lifestyle, and specific health goals.</p>
+
+                <p><b>3. Natural Healing:</b> Homeopathic treatments use natural substances, making them gentle yet effective with minimal risk of side effects. Dr. Niyanta's approach emphasizes harnessing the body's own healing mechanisms.</p>
+
+                <p><b>4. Patient-Centered Care:</b> At our practice, patients are at the center of everything we do. We prioritize open communication, active listening, and empowering patients to take charge of their health journey.</p>
+
+                <p><b>5. Provision of Written Prescriptions:</b> Dr. Niyanta provides written prescriptions for all recommended treatments, ensuring clarity and ease of follow-up. This helps patients adhere to their treatment plans and track their progress effectively.</p>
+
+                <p><b>6. Experience and Expertise:</b> With years of experience and expertise in homeopathic medicine, Dr. Niyanta brings a wealth of knowledge and skill to every patient interaction. Patients can trust in her expertise to guide them towards optimal health.</p>
+
+                <p><b>7. Comprehensive Care:</b> Our practice offers comprehensive care for a wide range of health concerns, including chronic conditions, acute illnesses, and mental health issues. We believe in treating the whole person, not just the disease.</p>
+
+                <p><b>8. Emphasis on Prevention:</b> In addition to treating existing health issues, Dr. Niyanta emphasizes the importance of preventive care and lifestyle modifications to promote long-term health and well-being.</p>
+
+                <p><b>9. Evidence-Based Approach:</b> While rooted in traditional homeopathic principles, Dr. Niyanta's practice also incorporates evidence-based research and modern medical knowledge to ensure the highest standard of care.</p>
+
+                <p><b>10. Commitment to Patient Satisfaction:</b> Above all, Dr. Niyanta is committed to the satisfaction and well-being of her patients. We strive to exceed expectations and provide compassionate, effective care that inspires trust and confidence.</p>
+            </div>
+
+            <div class="c-book-appointment-button-container">
+                <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#book-appointment-popup">Book Appointment</button>
+            </div>
+        </div>
+        
+    </section>
+    <!-- why choose us section end -->  
 
     <!-- testimonials section start -->
     <section class="container-fluid c-testimonials-section-container">
@@ -333,7 +374,7 @@
                 </div>
                 <div class="c-testimonials-card-container carousel-cell">
                     <div class="c-testimonials-card">
-                        <img class="c-user-image" src="assets/images/testimonials/user-2.jpg" alt="">
+                        <img class="c-user-image" src="assets/images/testimonials/neetu-bhabhi.jpeg" alt="">
                         <p class="c-user-review-text">Experiencing the discomfort of allergies without the relief of sneezing left me feeling trapped. Thankfully, Dr. Niyanta’s expertise and personalized treatment plan were the beacon of hope I needed. Within a few weeks under her care, I found myself on the path to recovery. Grateful beyond words for her compassionate guidance.</p>
                         <h1 class="c-user-name">Neetu</h1>
                         <p class="c-user-location">40/f, New Delhi</p>
