--- a/about.html
+++ b/about.html
@@ -108,6 +108,9 @@
                             <a href="our-service.html">Our Services</a>
                         </li>
                         <li class="c-menu-item">
+                            <a href="faqs.html">Faq's</a>
+                        </li>
+                        <li class="c-menu-item">
                             <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
