--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,9 @@
                             <a href="our-service.html">Our Services</a>
                         </li>
                         <li class="c-menu-item">
+                            <a href="faqs.html">Faq's</a>
+                        </li>
+                        <li class="c-menu-item">
                             <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
